# rustchat-cli

./: .gitignore  .npmignore  Cargo.toml  README.md  package.json
.github/workflows/: build.yml
examples/: config.toml
scripts/: postinstall.js  run.js
src/: cli.rs  config.rs  logger.rs  main.rs  repl.rs  secrets.rs  streaming.rs  utils.rs
src/provider/: anthropic.rs  google.rs  mod.rs  openai.rs  trait_provider.rs
